--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <div class="col">
               <div class="about-me-pc-bottom">
                 <div class="html-code" id="about-me">
-                  <h2 class="inverted">_index.html</h2>
+                  <h2 class="inverted non-focus">_index.html</h2>
                   <p class="non-focus html-code inverted">
                     &lt;head><br />
                     &lt;meta charset="UTF-8"><br />
@@ -188,7 +188,7 @@
                   </p>
                   <h2 class="inverted">
                     <span class="non-focus inverted"> &lt;title></span> Arsenij Kotikov
-                    <span class="non-focus"> &lt;/title></span>
+                    <span class="non-focus inverted"> &lt;/title></span>
                   </h2>
                   <p class="non-focus html-code inverted">
                     <br />
@@ -196,7 +196,7 @@
                   </p>
                   <h2 class="inverted">
                     <span class="non-focus inverted"> &lt;h1></span> Веб-разрабочик
-                    <span class="non-focus"> &lt;/h1></span><br />
+                    <span class="non-focus inverted"> &lt;/h1></span><br />
 
                     <span class="non-focus inverted"> &lt;h2> </span> Starting from 2020
                     <span class="non-focus inverted"> &lt;/h2></span>
@@ -296,13 +296,7 @@
                 <h1 class="card-h1 inverted"><i class="bx bxl-c-plus-plus inverted"></i>C++</h1>
                 <div class="card-body">
                   <h5 class="card-title inverted">Си плас плас</h5>
-                  <p class="card-text inverted">
-                    Объекто-ориентированные языки программирования промежуточного уровня.C++ широко используется для
-                    разработки программного обеспечения, являясь одним из самых популярных языков программирования.
-                    Область его применения включает создание операционных систем, разнообразных прикладных программ,
-                    драйверов устройств, приложений для встраиваемых систем, высокопроизводительных серверов, а также
-                    игр.
-                  </p>
+                  <p class="card-text inverted">Объекто-ориентированный язык программирования промежуточного уровня</p>
                 </div>
               </div>
             </div>
@@ -313,9 +307,6 @@
                   <h5 class="card-title inverted">Golang</h5>
                   <p class="card-text inverted">
                     Go представляет компилируемый статически типизированный язык программирования от компании Google.
-                    Язык Go предназначен для создания различного рода приложений, но прежде всего это веб-сервисы и
-                    клиент-серверные приложения. Хотя также язык обладает возможностями по работе с графикой,
-                    низкоуровневыми возможностями и т.д.
                   </p>
                 </div>
               </div>
