--- a/index.html
+++ b/index.html
@@ -162,61 +162,483 @@
               <!-- zoom button link -->
             </div>
           </div>
-          Арсений Котиков
+          root@macos-pc
           <!-- window title -->
         </div>
-        <div class="about-me-window" style="background: white; min-height: 80vh">
-          <div class="d-flex flex-wrap w-100 h-100" style="overflow: hidden">
-            <div class="col">
-              <img src="./src/pc_index/PSD.png" class="phone" />
-              <h1 class="content-h1 inverted">Обо мне</h1>
-              <h2 class="inverted about-me-text-align" style="padding-bottom: 1rem">немного инфы</h2>
-              <div class="about-me-pc-bottom d-flex flex-row">
-                <h1 class="inverted" style="font-size: clamp(1rem, 14vh, 30rem) !important">Я</h1>
-                <h2 class="inverted">занимаюсь WEB-разработкой<br />уже несколько лет</h2>
-              </div>
-            </div>
-            <div class="col">
-              <div class="about-me-pc-bottom">
-                <div class="html-code" id="about-me">
-                  <h2 class="inverted non-focus">_index.html</h2>
-                  <p class="non-focus html-code inverted">
-                    &lt;head><br />
-                    &lt;meta charset="UTF-8"><br />
-                    &lt;meta http-equiv="X-UA-Compatible" content="IE=edge"><br />
-                    &lt;content="width=device-width, initial-scale=1.0" ><br />
-                  </p>
-                  <h2 class="inverted">
-                    <span class="non-focus inverted"> &lt;title></span> Arsenij Kotikov
-                    <span class="non-focus inverted"> &lt;/title></span>
-                  </h2>
-                  <p class="non-focus html-code inverted">
-                    <br />
-                    &lt;/head> <br />&lt;body><br />
-                  </p>
-                  <h2 class="inverted">
-                    <span class="non-focus inverted"> &lt;h1></span> Веб-разрабочик
-                    <span class="non-focus inverted"> &lt;/h1></span><br />
-
-                    <span class="non-focus inverted"> &lt;h2> </span> Starting from 2020
-                    <span class="non-focus inverted"> &lt;/h2></span>
-                  </h2>
-                </div>
-                <div class="d-flex w-100">
-                  <div class="col">
-                    <div style="padding-left: 1rem">
-                      <button class="stack-btn inverted" onclick="alert('meow');">Мяу</button>
-                    </div>
-                  </div>
-                  <div class="col">
-                    <a href="#code-stack">
-                      <div style="padding-left: 1rem"><button class="stack-btn inverted">Стек</button></div>
-                    </a>
-                  </div>
-                </div>
-              </div>
+        <div
+          class="about-me-window"
+          style="
+            background: url('./src/pc_index/wallpaper.jpg');
+            background-size: cover;
+            min-height: 80vh;
+            position: relative;
+            overflow: hidden;
+          "
+        >
+          <div class="dock">
+            <ul>
+              <!-- <li>
+                <a class="app-button" data-app-window="app-window-1"><img src="./src/svg/vk.svg" /></a>
+              </li> -->
+              <li>
+                <a class="app-button" data-app-window="app-window-2"><img src="./src/svg/tiktok.svg" /></a>
+              </li>
+              <!-- <li>
+                <a class="app-button" data-app-window="app-window-3"><img src="./src/svg/yt.svg" /></a>
+              </li> -->
+            </ul>
+          </div>
+          <!-- Окна с приложениями -->
+          <div class="app-window app-window-1">
+            <div class="app-window-header">Tiktok</div>
+            <div class="app-window-body">
+              <p>This is my application. It's awesome!</p>
             </div>
           </div>
+          <div class="app-window app-window-2">
+            <div class="app-window-header">Tiktok</div>
+            <div class="app-window-body">
+              <header class="tiktok-header">
+                <div class="tiktok logo">
+                  <img src="./src/svg/tiktok.svg" alt="TikTok Logo" />
+                </div>
+                <div class="tiktok search">
+                  <input type="text" placeholder="Search" />
+                  <button><i class="fas fa-search"></i></button>
+                </div>
+                <div class="tiktok menu">
+                  <button><i class="fas fa-plus"></i></button>
+                  <button><i class="fas fa-heart"></i></button>
+                  <button><i class="fas fa-user"></i></button>
+                </div>
+              </header>
+              <main>
+                <div class="tiktok profile">
+                  <div class="tiktok avatar">
+                    <img src="./src/pc_index/tiktok.png" alt="Profile Picture" />
+                  </div>
+                  <div class="tiktok username">
+                    <h2 class="inverted">@arsenij_kotikov</h2>
+                    <a href="https://tiktok.com/@arsenij_kotikov">
+                      <button class="btn btn-info inverted" style="margin-top: 1rem">Подробнее</button>
+                    </a>
+                    <p>kotikov.is-a.dev/about</p>
+                  </div>
+                  <div class="tiktok stats">
+                    <div class="tiktok stat">
+                      <h2 class="inverted">60</h2>
+                      <p>Following</p>
+                    </div>
+                    <div class="tiktok stat">
+                      <h2 class="inverted">1612</h2>
+                      <p>Followers</p>
+                    </div>
+                    <div class="tiktok stat">
+                      <h2 class="inverted">85.2K</h2>
+                      <p>Likes</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="tiktok videos">
+                  <div class="tiktok video">
+                    <img src="https://picsum.photos/id/1018/800/800" alt="Video" />
+                  </div>
+                  <div class="tiktok video">
+                    <img src="https://picsum.photos/id/1037/800/800" alt="Video" />
+                  </div>
+                  <div class="tiktok video">
+                    <img src="https://picsum.photos/id/1043/800/800" alt="Video" />
+                  </div>
+                  <div class="tiktok video">
+                    <img src="https://picsum.photos/id/1059/800/800" alt="Video" />
+                  </div>
+                  <div class="tiktok video">
+                    <img src="https://picsum.photos/id/1062/800/800" alt="Video" />
+                  </div>
+                  <div class="tiktok video">
+                    <img src="https://picsum.photos/id/1066/800/800" alt="Video" />
+                  </div>
+                </div>
+              </main>
+
+              <style>
+                .profile ~ h2 {
+                  color: black !important;
+                }
+                .tiktok-header {
+                  background-color: #fff;
+                  display: flex;
+                  justify-content: space-between;
+                  align-items: center;
+                  padding: 1rem;
+                  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+                }
+
+                .tiktok.logo img {
+                  height: 2rem;
+                }
+
+                .tiktok.search {
+                  position: relative;
+                }
+
+                .tiktok.search input {
+                  padding: 0.5rem 2rem 0.5rem 1rem;
+                  border: none;
+                  border-radius: 1.5rem;
+                  background-color: #f5f5f5;
+                  width: 20rem;
+                }
+
+                .tiktok.search button {
+                  position: absolute;
+                  top: 50%;
+                  transform: translateY(-50%);
+                  right: 0.5rem;
+                  border: none;
+                  background-color: transparent;
+                  color: #888;
+                  font-size: 1.2rem;
+                }
+
+                .tiktok.menu button {
+                  border: none;
+                  background-color: transparent;
+                  margin-left: 1rem;
+                  color: #888;
+                  font-size: 1.2rem;
+                }
+
+                /* Profile section */
+
+                .tiktok.profile {
+                  display: flex;
+                  align-items: center;
+                  justify-content: center;
+                  flex-direction: column;
+                  padding: 2rem;
+                  background-color: #fff;
+                  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+                  margin: 1rem;
+                }
+
+                .tiktok.avatar img {
+                  width: 8rem;
+                  height: 8rem;
+                  object-fit: cover;
+                  border-radius: 50%;
+                }
+
+                .tiktok.username {
+                  margin: 1rem 0;
+                  text-align: center;
+                }
+
+                .tiktok.username h1 {
+                  font-size: 2rem;
+                  font-weight: bold;
+                }
+
+                .tiktok username p {
+                  font-size: 1rem;
+                  color: #888;
+                }
+
+                .tiktok.stats {
+                  display: flex;
+                  justify-content: space-between;
+                  margin-top: 2rem;
+                }
+
+                .tiktok.stat {
+                  text-align: center;
+                  margin-right: 20px;
+                }
+
+                .tiktok.stat h2 {
+                  font-size: 2rem;
+                  font-weight: bold;
+                }
+
+                .tiktok.stat p {
+                  font-size: 1rem;
+                  color: #888;
+                }
+
+                /* Videos section */
+
+                .tiktok.videos {
+                  display: grid;
+                  grid-template-columns: repeat(3, 1fr);
+                  gap: 1rem;
+                  margin: 1rem;
+                }
+
+                .tiktok.video {
+                  overflow: hidden;
+                }
+
+                .tiktok.video img {
+                  width: 100%;
+                  height: 100%;
+                  object-fit: cover;
+                  cursor: pointer;
+                }
+
+                .tiktok.video:hover img {
+                  transform: scale(1.05);
+                  transition: all 0.3s ease-in-out;
+                }
+              </style>
+            </div>
+          </div>
+          <div class="app-window app-window-3">
+            <div class="app-window-header">Tiktok</div>
+            <div class="app-window-body">
+              <header class="vk-header">
+                <div class="vk logo">
+                  <img src="https://vk.com/images/svg_icons/favicons/fav_logo_2x.ico" alt="VK Logo" />
+                </div>
+                <div class="vk search">
+                  <input type="text" placeholder="Search" />
+                  <button><i class="fas fa-search"></i></button>
+                </div>
+                <div class="vk menu">
+                  <button><i class="fas fa-envelope"></i></button>
+                  <button><i class="fas fa-bell"></i></button>
+                  <button><i class="fas fa-user"></i></button>
+                </div>
+              </header>
+              <main>
+                <div class="vk profile">
+                  <div class="vk avatar">
+                    <img src="https://picsum.photos/id/237/200/200" alt="Profile Picture" />
+                  </div>
+                  <div class="vk username">
+                    <h1>VK User</h1>
+                    <p>VK user description goes here</p>
+                  </div>
+                  <div class="vk stats">
+                    <div class="vk stat">
+                      <h2>200</h2>
+                      <p>Friends</p>
+                    </div>
+                    <div class="vk stat">
+                      <h2>2.3K</h2>
+                      <p>Followers</p>
+                    </div>
+                    <div class="vk stat">
+                      <h2>150</h2>
+                      <p>Photos</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="vk photos">
+                  <div class="vk photo">
+                    <img src="https://picsum.photos/id/1018/400/400" alt="Photo" />
+                  </div>
+                  <div class="vk photo">
+                    <img src="https://picsum.photos/id/1037/400/400" alt="Photo" />
+                  </div>
+                  <div class="vk photo">
+                    <img src="https://picsum.photos/id/1043/400/400" alt="Photo" />
+                  </div>
+                  <div class="vk photo">
+                    <img src="https://picsum.photos/id/1059/400/400" alt="Photo" />
+                  </div>
+                  <div class="vk photo">
+                    <img src="https://picsum.photos/id/1062/400/400" alt="Photo" />
+                  </div>
+                  <div class="vk photo">
+                    <img src="https://picsum.photos/id/1066/400/400" alt="Photo" />
+                  </div>
+                </div>
+              </main>
+            </div>
+          </div>
+          <style>
+            .vk-header {
+              display: flex;
+              justify-content: space-between;
+              align-items: center;
+              padding: 1rem;
+              background-color: #fff;
+              box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+            }
+
+            .vk.logo img {
+              height: 2.5rem;
+            }
+
+            .vk.search input[type="text"] {
+              padding: 0.5rem;
+              border: none;
+              border-radius: 3px 0 0 3px;
+            }
+
+            .vk.search button {
+              padding: 0.5rem;
+              background-color: #0077ff;
+              color: #fff;
+              border: none;
+              border-radius: 0 3px 3px 0;
+            }
+
+            .vk.menu button {
+              padding: 0.5rem;
+              margin-left: 1rem;
+              background-color: #fff;
+              border: none;
+              box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+            }
+
+            .vk.menu button:hover {
+              background-color: #f2f2f2;
+            }
+
+            .vk.profile {
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              flex-direction: column;
+              margin-top: 2rem;
+            }
+
+            .vk.avatar img {
+              border-radius: 50%;
+            }
+
+            .vk.username h1 {
+              margin-top: 1rem;
+              font-size: 2rem;
+            }
+
+            .vk.username p {
+              margin-top: 0.5rem;
+              font-size: 1.2rem;
+              color: #999;
+            }
+
+            .vk.stats {
+              display: flex;
+              justify-content: space-between;
+              margin-top: 2rem;
+              width: 100%;
+              max-width: 500px;
+            }
+
+            .vk.stat {
+              text-align: center;
+            }
+
+            .vk.stat h2 {
+              font-size: 2rem;
+            }
+
+            .vk.stat p {
+              margin-top: 0.5rem;
+              font-size: 1.2rem;
+              color: #999;
+            }
+
+            .vk.photos {
+              display: grid;
+              grid-template-columns: repeat(3, 1fr);
+              gap: 1rem;
+              margin-top: 2rem;
+            }
+
+            .vk.photo img {
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
+              border-radius: 3px;
+            }
+          </style>
+          <div class="app-window app-window-4">
+            <h2>My Application 4</h2>
+            <p>This is my fourth application. It's awesome!</p>
+          </div>
+          <div class="app-window app-window-5">
+            <h2>My Application 5</h2>
+            <p>This is my fifth application. It's awesome!</p>
+          </div>
+          <script src="./src/js/window.js"></script>
+          <script src="./src/js/drag-window.js"></script>
+
+          <style>
+            .app-window-header {
+              padding: 10px;
+              background-color: #ccc;
+              cursor: move;
+            }
+            .container {
+              position: relative;
+              height: 100vh;
+              background-color: #fff;
+            }
+
+            .dock {
+              position: absolute;
+              bottom: 0;
+              height: 70px;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              width: 100%;
+              text-align: center; /* выравнивание содержимого по центру */
+            }
+
+            .dock ul {
+              background: white;
+              padding: 0.4rem;
+              border-radius: 1rem;
+              display: flex;
+              list-style: none;
+              margin: 0 auto; /* центрирование содержимого */
+            }
+
+            .dock li {
+              margin: 0 10px;
+            }
+
+            .dock a {
+              display: block;
+              width: 40px;
+              height: 40px;
+              overflow: hidden;
+              box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+              transition: transform 0.2s ease-out;
+            }
+
+            .dock a:hover {
+              transform: translateY(-4px);
+            }
+
+            .dock img {
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
+            }
+
+            /* стили для окна с приложением */
+            .app-window {
+              position: absolute;
+              top: 50%;
+              left: 50%;
+              transform: translate(-50%, -50%);
+              width: 80%;
+              height: 80%;
+              background-color: white;
+              box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
+              z-index: 10;
+              display: none; /* скрываем окно приложения по умолчанию */
+            }
+            .app-window-body {
+              overflow-y: scroll;
+              height: 92%;
+            }
+          </style>
         </div>
       </div>
     </div>
