--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                   border: none;
                   border-radius: 1.5rem;
                   background-color: #f5f5f5;
-                  width: 20rem;
+                  width: 100%;
                 }
 
                 .tiktok.search button {
