--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./css/pc/pc.css" rel="stylesheet" />
     <link href="./css/pc/window.css" rel="stylesheet" />
+    <link href="./css/pc/window/tiktok.css" rel="stylesheet" />
+    <!-- <link href="./css/pc/window/vk.css" rel="stylesheet" /> -->
 
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/js/bootstrap.min.js"
@@ -364,136 +366,6 @@
                   </div>
                 </div>
               </main>
-
-              <style>
-                .profile ~ h2 {
-                  color: black !important;
-                }
-                .tiktok-header {
-                  background-color: #fff;
-                  display: flex;
-                  justify-content: space-between;
-                  align-items: center;
-                  padding: 1rem;
-                  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-                }
-
-                .tiktok.logo img {
-                  height: 2rem;
-                }
-
-                .tiktok.search {
-                  position: relative;
-                }
-
-                .tiktok.search input {
-                  padding: 0.5rem 2rem 0.5rem 1rem;
-                  border: none;
-                  border-radius: 1.5rem;
-                  background-color: #f5f5f5;
-                  width: 100%;
-                }
-
-                .tiktok.search button {
-                  position: absolute;
-                  top: 50%;
-                  transform: translateY(-50%);
-                  right: 0.5rem;
-                  border: none;
-                  background-color: transparent;
-                  color: #888;
-                  font-size: 1.2rem;
-                }
-
-                .tiktok.menu button {
-                  border: none;
-                  background-color: transparent;
-                  margin-left: 1rem;
-                  color: #888;
-                  font-size: 1.2rem;
-                }
-
-                /* Profile section */
-
-                .tiktok.profile {
-                  display: flex;
-                  align-items: center;
-                  justify-content: center;
-                  flex-direction: column;
-                  padding: 2rem;
-                  background-color: #fff;
-                  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-                  margin: 1rem;
-                }
-
-                .tiktok.avatar img {
-                  width: 8rem;
-                  height: 8rem;
-                  object-fit: cover;
-                  border-radius: 50%;
-                }
-
-                .tiktok.username {
-                  margin: 1rem 0;
-                  text-align: center;
-                }
-
-                .tiktok.username h1 {
-                  font-size: 2rem;
-                  font-weight: bold;
-                }
-
-                .tiktok username p {
-                  font-size: 1rem;
-                  color: #888;
-                }
-
-                .tiktok.stats {
-                  display: flex;
-                  justify-content: space-between;
-                  margin-top: 2rem;
-                }
-
-                .tiktok.stat {
-                  text-align: center;
-                  margin-right: 20px;
-                }
-
-                .tiktok.stat h2 {
-                  font-size: 2rem;
-                  font-weight: bold;
-                }
-
-                .tiktok.stat p {
-                  font-size: 1rem;
-                  color: #888;
-                }
-
-                /* Videos section */
-
-                .tiktok.videos {
-                  display: grid;
-                  grid-template-columns: repeat(3, 1fr);
-                  gap: 1rem;
-                  margin: 1rem;
-                }
-
-                .tiktok.video {
-                  overflow: hidden;
-                }
-
-                .tiktok.video img {
-                  width: 100%;
-                  height: 100%;
-                  object-fit: cover;
-                  cursor: pointer;
-                }
-
-                .tiktok.video:hover img {
-                  transform: scale(1.05);
-                  transition: all 0.3s ease-in-out;
-                }
-              </style>
             </div>
           </div>
           <div class="app-window app-window-3">
@@ -825,105 +697,7 @@ def ai(text):  # переменная recommendation из recommendation.py
               </script>
             </div>
           </div>
-          <style>
-            .vk-header {
-              display: flex;
-              justify-content: space-between;
-              align-items: center;
-              padding: 1rem;
-              background-color: #fff;
-              box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-            }
 
-            .vk.logo img {
-              height: 2.5rem;
-            }
-
-            .vk.search input[type="text"] {
-              padding: 0.5rem;
-              border: none;
-              border-radius: 3px 0 0 3px;
-            }
-
-            .vk.search button {
-              padding: 0.5rem;
-              background-color: #0077ff;
-              color: #fff;
-              border: none;
-              border-radius: 0 3px 3px 0;
-            }
-
-            .vk.menu button {
-              padding: 0.5rem;
-              margin-left: 1rem;
-              background-color: #fff;
-              border: none;
-              box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-            }
-
-            .vk.menu button:hover {
-              background-color: #f2f2f2;
-            }
-
-            .vk.profile {
-              display: flex;
-              align-items: center;
-              justify-content: center;
-              flex-direction: column;
-              margin-top: 2rem;
-            }
-
-            .vk.avatar img {
-              border-radius: 50%;
-            }
-
-            .vk.username h1 {
-              margin-top: 1rem;
-              font-size: 2rem;
-            }
-
-            .vk.username p {
-              margin-top: 0.5rem;
-              font-size: 1.2rem;
-              color: #999;
-            }
-
-            .vk.stats {
-              display: flex;
-              justify-content: space-between;
-              margin-top: 2rem;
-              width: 100%;
-              max-width: 500px;
-            }
-
-            .vk.stat {
-              text-align: center;
-            }
-
-            .vk.stat h2 {
-              font-size: 2rem;
-            }
-
-            .vk.stat p {
-              margin-top: 0.5rem;
-              font-size: 1.2rem;
-              color: #999;
-            }
-
-            .vk.photos {
-              display: grid;
-              grid-template-columns: repeat(3, 1fr);
-              gap: 1rem;
-              margin-top: 2rem;
-            }
-
-            .vk.photo img {
-              width: 100%;
-              height: 100%;
-              object-fit: cover;
-              border-radius: 3px;
-            }
-          </style>
           <div class="app-window app-window-4">
             <h2>My Application 4</h2>
             <p>This is my fourth application. It's awesome!</p>
@@ -934,80 +708,6 @@ def ai(text):  # переменная recommendation из recommendation.py
           </div>
           <script src="./src/js/window.js"></script>
           <script src="./src/js/drag-window.js"></script>
-
-          <style>
-            .app-window-header {
-              padding: 10px;
-              background-color: #ccc;
-              cursor: move;
-            }
-            .container {
-              position: relative;
-              height: 100vh;
-              background-color: #fff;
-            }
-
-            .dock {
-              position: absolute;
-              bottom: 0;
-              height: 70px;
-              display: flex;
-              align-items: center;
-              justify-content: center;
-              width: 100%;
-              text-align: center; /* выравнивание содержимого по центру */
-            }
-
-            .dock ul {
-              background: white;
-              padding: 0.4rem;
-              border-radius: 1rem;
-              display: flex;
-              list-style: none;
-              margin: 0 auto; /* центрирование содержимого */
-            }
-
-            .dock li {
-              margin: 0 10px;
-            }
-
-            .dock a {
-              display: block;
-              width: 40px;
-              height: 40px;
-              overflow: hidden;
-              box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-              transition: transform 0.2s ease-out;
-            }
-
-            .dock a:hover {
-              transform: translateY(-4px);
-            }
-
-            .dock img {
-              width: 100%;
-              height: 100%;
-              object-fit: cover;
-            }
-
-            /* стили для окна с приложением */
-            .app-window {
-              position: absolute;
-              top: 50%;
-              left: 50%;
-              transform: translate(-50%, -50%);
-              width: 80%;
-              height: 80%;
-              background-color: white;
-              box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
-              z-index: 10;
-              display: none; /* скрываем окно приложения по умолчанию */
-            }
-            .app-window-body {
-              overflow-y: scroll;
-              height: 92%;
-            }
-          </style>
         </div>
       </div>
     </div>
