pc-specs update and window styling

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <link href="./css/pc/pc.css" rel="stylesheet" />
     <link href="./css/pc/window.css" rel="stylesheet" />
     <link href="./css/pc/window/tiktok.css" rel="stylesheet" />
+    <link href="./css/pc/window/pc_specs.css" rel="stylesheet" />
     <!-- <link href="./css/pc/window/vk.css" rel="stylesheet" /> -->
 
     <script
@@ -178,19 +179,19 @@
           <div class="buttons">
             <div class="close">
               <a class="closebutton" href="#"
-                ><span><strong>x</strong></span></a
+                ><span class="window-span"><strong>x</strong></span></a
               >
               <!-- close button link -->
             </div>
             <div class="minimize">
               <a class="minimizebutton" href="#"
-                ><span><strong>&ndash;</strong></span></a
+                ><span class="window-span"><strong>&ndash;</strong></span></a
               >
               <!-- minimize button link -->
             </div>
             <div class="zoom">
               <a class="zoombutton" href="#"
-                ><span><strong>+</strong></span></a
+                ><span class="window-span"><strong>+</strong></span></a
               >
               <!-- zoom button link -->
             </div>
@@ -297,7 +298,42 @@
           <div class="app-window app-window-1">
             <div class="app-window-header">О пека</div>
             <div class="app-window-body">
-              <h1 class="inverted">:D</h1>
+              <div class="window-content">
+                <table>
+                  <tr>
+                    <th>Component</th>
+                    <th>Specification</th>
+                  </tr>
+                  <tr>
+                    <td>Процессор</td>
+                    <td>Процессор AMD Ryzen 5 5600X 6-Core Processor 3.70 GHz</td>
+                  </tr>
+                  <tr>
+                    <td>Оперативная память</td>
+                    <td>16,0 ГБ</td>
+                  </tr>
+                  <tr>
+                    <td>Код устройства</td>
+                    <td>MEOWOS-1</td>
+                  </tr>
+                  <tr>
+                    <td>Код продукта</td>
+                    <td>MEOW-1</td>
+                  </tr>
+                  <tr>
+                    <td>Тип системы</td>
+                    <td>64-разрядная операционная система, процессор x64</td>
+                  </tr>
+                  <tr>
+                    <td>Перо и сенсорный ввод</td>
+                    <td>Для этого монитора доступен ввод с помощью пера и сенсорный ввод</td>
+                  </tr>
+                  <tr>
+                    <td>Operating System</td>
+                    <td>MeowOS 11 Pro</td>
+                  </tr>
+                </table>
+              </div>
             </div>
           </div>
 
