--- a/index.html
+++ b/index.html
@@ -216,12 +216,55 @@
               </div>
             </a>
             <a class="app-button" data-app-window="app-window-4">
-              <div class="icon">
-                <img src="./src/pc_index/pingv.svg" />
+              <div class="icon" id="icon">
+                <img src="./src/svg/vscode-alt.svg" />
                 <span>DO NOT</span>
               </div>
             </a>
           </div>
+          <style>
+            @keyframes bounce {
+              from,
+              20%,
+              53%,
+              80%,
+              to {
+                animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+                transform: translate3d(0, 0, 0);
+              }
+
+              40%,
+              43% {
+                animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+                transform: translate3d(0, -30px, 0);
+              }
+
+              70% {
+                animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+                transform: translate3d(0, -15px, 0);
+              }
+
+              90% {
+                transform: translate3d(0, -4px, 0);
+              }
+            }
+
+            .bounce {
+              animation-name: bounce;
+              animation-duration: 1s;
+            }
+          </style>
+          <script>
+            const icons = document.querySelectorAll(".icon img");
+            icons.forEach((icon) => {
+              icon.addEventListener("click", () => {
+                icon.classList.add("bounce");
+                setTimeout(() => {
+                  icon.classList.remove("bounce");
+                }, 1000);
+              });
+            });
+          </script>
           <style>
             #vscode-editor {
               width: 100%;
@@ -257,7 +300,7 @@
             }
 
             .icon img {
-              max-width: 70%;
+              max-width: 55%;
               max-height: 70%;
             }
 
