--- a/index.html
+++ b/index.html
@@ -902,7 +902,7 @@
                   <p class="codewars-rank">Rank: 5 kyu</p>
                   <p class="codewars-honor">Honor: 1234</p>
                   <p class="codewars-challenges">Honor: 1234</p>
-                  <a href="codewars.com/users/Arsenij%20Kotikov">
+                  <a href="https://codewars.com/users/Arsenij%20Kotikov">
                     <button class="cw-lc-btn">Профиль</button>
                   </a>
                 </div>
