--- a/index.html
+++ b/index.html
@@ -588,14 +588,14 @@
           </div>
         </div>
         <div class="col-lg-3 p-5">
-          <h1>CatOS</h1>
+          <h1>Cat<span class="h1-weak">OS</span></h1>
           <p class="pt-2">Это почти как MacOS, только работает на cat magic ✨</p>
         </div>
       </div>
     </div>
     <div class="my-projects" style="overflow: hidden">
-      <div class="content pt-5">
-        <h1 class="content-h1">Мой<br />стек</h1>
+      <div class="content pt-5 mb-lg-5">
+        <h1 class="content-h1"><span class="h1-weak">Мой</span><br />стек</h1>
         <div>
           <section id="solar-system">
             <div id="sun"></div>
@@ -645,15 +645,12 @@
           </div>
           <div class="col">
             <div class="card">
-              <h1 class="card-h1"><i class="bx bx-server"></i>PHP / Node.js</h1>
+              <h1 class="card-h1"><i class="bx bx-server"></i>PHP / Node</h1>
               <div class="card-body">
                 <h2 class="card-title">PHP / Node.js</h2>
                 <p class="card-text">
                   PHP - C-подобный скриптовый язык общего назначения, интенсивно применяемый для разработки
-                  веб-приложений. В настоящее время поддерживается подавляющим большинством хостинг-провайдеров и
-                  является одним из лидеров среди языков, применяющихся для создания динамических веб-сайтов. Node или
-                  Node.js — программная платформа, превращающая JavaScript из узкоспециализированного языка в язык
-                  общего назначения.
+                  веб-приложений.
                 </p>
               </div>
             </div>
@@ -721,8 +718,7 @@
                 <h2 class="card-title">Блокчейн</h2>
                 <p class="card-text">
                   Блокчейн — новейшая технология, интерес к которой вырос вместе с популярностью криптовалют. Сегодня ее
-                  широко обсуждают не только в мире финансов. Блокчейн уже пробуют использовать для хранения и обработки
-                  персональных данных и идентификации, в маркетинге и компьютерных играх.
+                  широко обсуждают не только в мире финансов.
                 </p>
               </div>
             </div>
@@ -891,7 +887,7 @@
           });
         </script>
       </div>
-      <div class="background" id="container">
+      <div class="background mt-lg-5 mb-lg-5" id="container">
         <div class="content">
           <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col no-hover">
@@ -1012,13 +1008,49 @@
           </div>
         </div>
       </div>
+      <div
+        class="header content-header mt-lg-5 mb-lg-5"
+        style="background: linear-gradient(rgba(255, 255, 0, 0), rgba(255, 255, 0, 0.5))"
+      >
+        <div class="content content-github-reffer">
+          <div class="header content-header pb-lg-4 pb-5" style="overflow: hidden; background: rgb(0, 0, 0)">
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+              <div class="col-lg-3 no-hover">
+                <div class="card">
+                  <div class="card-body m-auto">
+                    <h2 class="card-title">// Кстати</h2>
+                  </div>
+                </div>
+              </div>
+              <div class="col" style="background: yellow">
+                <img src="./src/svg/kate.svg" />
+              </div>
+              <div class="col no-hover">
+                <div class="card">
+                  <div class="card-body">
+                    <div class="p-3 pb-0">
+                      <h1 class="card-h1">GitHub</h1>
+                      <p class="card-text pt-3 pb-4">
+                        Большинство моих проектов есть на Github и имеют свободные к использованию лицензии
+                      </p>
+                      <button type="button" class="stack-btn-2" onclick="window.open('https://github.com/kotru21')">
+                        Клик
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <!-- <div class="cat-maincontent todo">
         <div id="grid" class="content" style="overflow: hidden">
           <h1 class="content-h1 cat-h1" style="float: right; width: 50%">Рандом пикча</h1>
         </div>
       </div> -->
       <div class="content" style="position: relative">
-        <h1 class="content-h1 pb-4" style="padding-top: 5rem">Source code</h1>
+        <h1 class="content-h1 pb-4" style="padding-top: 5rem">Source <span class="h1-weak">code</span></h1>
         <div class="card">
           <h1 style="padding-bottom: clamp(0.5rem, 0.5vw, 30rem)"><i class="bx bx-code"></i>Ага,</h1>
           <div class="card-body">
