--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
               <h1 class="card-h1"><i class="bx bxl-javascript"></i>JS</h1>
               <div class="card-body">
                 <h2 class="card-title">JavaScript</h2>
-                <p class="card-text">
+                <p class="card-text pt-3">
                   JavaScript это язык, который позволяет вам применять сложные вещи на web странице.
                 </p>
               </div>
@@ -635,7 +635,7 @@
               <h1 class="card-h1"><i class="bx bxl-html5"></i>HTML / CSS</h1>
               <div class="card-body">
                 <h2 class="card-title">Hyper Text Markup Language</h2>
-                <p class="card-text">
+                <p class="card-text pt-3">
                   Язык гипертекстовой разметки страницы. Он используется для того, чтобы дать браузеру понять, как нужно
                   отображать загруженный сайт. Cascading Style Sheets — формальный язык описания внешнего вида web
                   страницы.
@@ -648,7 +648,7 @@
               <h1 class="card-h1"><i class="bx bx-server"></i>PHP / Node</h1>
               <div class="card-body">
                 <h2 class="card-title">PHP / Node.js</h2>
-                <p class="card-text">
+                <p class="card-text pt-3">
                   PHP - C-подобный скриптовый язык общего назначения, интенсивно применяемый для разработки
                   веб-приложений.
                 </p>
@@ -665,8 +665,10 @@
               <div class="card">
                 <h1 class="card-h1 inverted"><i class="bx bxl-c-plus-plus inverted"></i>C++</h1>
                 <div class="card-body">
-                  <h5 class="card-title inverted">Си плас плас</h5>
-                  <p class="card-text inverted">Объекто-ориентированный язык программирования промежуточного уровня</p>
+                  <h2 class="card-title inverted">Си плас плас</h2>
+                  <p class="card-text inverted pt-3">
+                    Объекто-ориентированный язык программирования промежуточного уровня
+                  </p>
                 </div>
               </div>
             </div>
@@ -674,8 +676,8 @@
               <div class="card">
                 <h1 class="card-h1 inverted"><i class="bx bxl-google inverted"></i>GO</h1>
                 <div class="card-body">
-                  <h5 class="card-title inverted">Golang</h5>
-                  <p class="card-text inverted">
+                  <h2 class="card-title inverted">Golang</h2>
+                  <p class="card-text inverted pt-3">
                     Go представляет компилируемый статически типизированный язык программирования от компании Google.
                   </p>
                 </div>
@@ -694,7 +696,7 @@
               <span><i class="bx bxs-cat" style="color: #e81010; font-size: clamp(2rem, 20vw, 10rem)"></i></span>
               <div class="card-body">
                 <h2 class="card-title">Котики</h2>
-                <p class="card-text">Лол, здесь нужно что-то объяснять? Котики классные.</p>
+                <p class="card-text pt-3">Лол, здесь нужно что-то объяснять? Котики классные.</p>
               </div>
             </div>
           </div>
@@ -703,7 +705,7 @@
               <span><i class="bx bxs-microchip" style="color: #e81010; font-size: clamp(2rem, 20vw, 10rem)"></i></span>
               <div class="card-body">
                 <h2 class="card-title">ИИ</h2>
-                <p class="card-text">
+                <p class="card-text pt-3">
                   Нейро́нная сеть — математическая модель, а также её программное или аппаратное воплощение, построенная
                   по принципу организации и функционирования биологических нейронных сетей — сетей нервных клеток живого
                   организма.
@@ -716,7 +718,7 @@
               <span><i class="bx bxl-bitcoin" style="color: #e81010; font-size: clamp(2rem, 20vw, 10rem)"></i></span>
               <div class="card-body">
                 <h2 class="card-title">Блокчейн</h2>
-                <p class="card-text">
+                <p class="card-text pt-3">
                   Блокчейн — новейшая технология, интерес к которой вырос вместе с популярностью криптовалют. Сегодня ее
                   широко обсуждают не только в мире финансов.
                 </p>
@@ -895,11 +897,11 @@
                 <img src="./src/svg/codewars.svg" alt="Codewars logo" />
                 <div class="codewars-info">
                   <h3>Username</h3>
-                  <p class="codewars-rank">Rank: 5 kyu</p>
+                  <p class="codewars-rank pt-2">Rank: 5 kyu</p>
                   <p class="codewars-honor">Honor: 1234</p>
                   <p class="codewars-challenges">Honor: 1234</p>
                   <a href="https://codewars.com/users/Arsenij%20Kotikov">
-                    <button class="cw-lc-btn">Профиль</button>
+                    <button class="cw-lc-btn mt-3">Профиль</button>
                   </a>
                 </div>
               </div>
@@ -961,12 +963,12 @@
                 <img src="./src/svg/leetcode.svg" alt="Leetcode logo" />
                 <div class="leetcode-info">
                   <h3>kotru21</h3>
-                  <p class="leetcode-Rank">Rank: 5 kyu</p>
+                  <p class="leetcode-Rank pt-2">Rank: 5 kyu</p>
                   <p class="leetcode-EasySolved">Rank: 5 kyu</p>
                   <p class="leetcode-MediumSolved">Honor: 1234</p>
                   <p class="leetcode-HardSolved">Honor: 1234</p>
                   <a href="https://leetcode.com/kotru21/">
-                    <button class="cw-lc-btn">Профиль</button>
+                    <button class="cw-lc-btn mt-3">Профиль</button>
                   </a>
                 </div>
               </div>
@@ -997,11 +999,11 @@
                 })
                 .catch((error) => console.error(error));
             </script>
-            <div class="col no-hover p-5">
+            <div class="col no-hover pt-sm-5 p-lg-5">
               <div class="position-relative pt-sm-5">
                 <div class="position-absolute bottom-0">
                   <h1>Stat</h1>
-                  <p class="pt-2">Codewars и Leetcode</p>
+                  <p class="pt-3">Codewars и Leetcode</p>
                 </div>
               </div>
             </div>
@@ -1030,7 +1032,7 @@
                   <div class="card-body">
                     <div class="p-3 pb-0">
                       <h1 class="card-h1">GitHub</h1>
-                      <p class="card-text pt-3 pb-4">
+                      <p class="card-text pt-2 pb-3">
                         Большинство моих проектов есть на Github и имеют свободные к использованию лицензии
                       </p>
                       <button type="button" class="stack-btn-2" onclick="window.open('https://github.com/kotru21')">
