--- a/index.html
+++ b/index.html
@@ -958,7 +958,7 @@
                 });
               </script>
             </div>
-            <div class="col no-hover">
+            <div class="col no-hover mb-5">
               <div class="leetcode-profile">
                 <img src="./src/svg/leetcode.svg" alt="Leetcode logo" />
                 <div class="leetcode-info">
