--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="google-site-verification" content="7r85BpekX-CWJLJtao5ZqBQC18tXGM58WXHCHPT-Qrg" />
     <script>
       window.onload = function () {
         function msieversion() {
